# Fredkin

./: Cargo.toml  the_runs.txt
chain_gen/src/: calculation_utils.rs  file_utils.rs  main.rs  spin_chain.rs
data/: the_runs.txt  z_data.txt
src/: data_utils.rs  file_utils.rs  main.rs  spin_chain.rs
