[package]
name = "fredkin_chain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_mt = "4.2.2"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
plotlib = "0.5.1"